--- a/paper.Rmd
+++ b/paper.Rmd
@@ -173,7 +173,7 @@ representations and sophisticated statistical methods.
 \includegraphics[width=\textwidth]{diagrams/GRanges}
 \caption{An illustration of the GRanges data model for a
 sample from an RNA-seq experiment. The core components of the data model
-inlcude a seqname column (representing the chromosome), a ranges column
+include a seqname column (representing the chromosome), a ranges column
 which consists of start and end coordinates for a genomic region, and a
 strand identifier (either positive, negative, or unstranded). Metadata
 are included as columns to the right of the dotted line as annotations
@@ -295,9 +295,9 @@ and merging. The parallel operations map to infix operators, which we
 surround with _%_ symbols, a convention borrowed from R syntax.  For
 example, the parallel intersection (_x %intersect% y_) finds the
 intersecting range between _xi_ and _yi_ for _i_ in _1...n_, where _n_
-is the length of both _x_ and _y_. In constrast, the merging
+is the length of both _x_ and _y_. In contrast, the merging
 intersection (_intersect\_ranges(x, y)_) returns a new set of disjoint
-ranges representing whereever there was overlap between a range in _x_
+ranges representing wherever there was overlap between a range in _x_
 and a range in _y_. We use the infix syntax for the parallel
 operations, since it is the conventional syntax for parallel, binary
 operations in R. Finding the parallel union will fail when two ranges
@@ -351,11 +351,11 @@ merging, these operations conform to the semantics and syntax of the
 
 ## Design principles
 
-The design of plyranges adheres to well understood principles of
+The design of `plyranges` adheres to well understood principles of
 language and API design: cognitive consistency, cohesion,
 expressiveness and endomorphism \cite{Green1996-qg}. 
-To varying degrees, these principles also underly the
-design of dplyr and the Bioconductor infrastructure.
+To varying degrees, these principles also underlie the
+design of `dplyr` and the Bioconductor infrastructure.
 
 ### Cognitive consistency and fluency
 
@@ -364,12 +364,12 @@ user's cognitive model, i.e., how the user thinks about the data. This
 requires careful selection of the level of abstraction so that the
 user can express workflows in the language of genomics. This motivates
 the adoption of the tidy GRanges object as our central data
-structure. The basic data.frame and dplyr tibble lack any notion of
+structure. The basic data.frame and `dplyr` tibble lack any notion of
 genomic ranges and so could not easily support our genomic grammar,
 with its specific verbs for range-oriented data manipulation. Another
-example of cognitive consistency is how plyranges is insensitive to
+example of cognitive consistency is how `plyranges` is insensitive to
 direction/strand by default when, e.g., detecting
-overlaps. GenomicRanges has the opposite behavior. We believe that
+overlaps. `GenomicRanges` has the opposite behavior. We believe that
 defaulting to purely spatial overlap is most intuitive to most users.
 
 <!--
@@ -380,13 +380,13 @@ can do is attempt to match the intuition of the user, so when the user
 decides what to do, there is an obvious way of doing it. I'm not ready
 to claim that the user should start from our grammar.
 -->
-Like dplyr, plyranges verbs are functional: they are free of side
+Like `dplyr`, `plyranges` verbs are functional: they are free of side
 effects and return their result. This enables chaining of verbs
 through syntax like the forward pipe operator (`%>%`, read as "then")
-of the magrittr package \cite{R-magrittr}. This has syntax has a direct
+of the `magrittr` package \cite{R-magrittr}. This has syntax has a direct
 cognitive mapping to natural language and the intuitive notion of
 pipelines. The low-level object-oriented APIs of Bioconductor tend to
-manipulate data via subreplacement functions, like `start(gr) <-
+manipulate data via sub-replacement functions, like `start(gr) <-
 x`. These ultimately produce the side effect of replacing a symbol
 mapping in the current environment and thus are not amenable to
 so-called fluent syntax.
@@ -398,7 +398,7 @@ producing any side-effects. Singular tasks are not necessarily atomic;
 they can always be broken down further at lower levels of abstraction.
 For example, to resize a range, the user needs to specify which
 position (start, end, midpoint) should be invariant over the
-transformation. The `resize()` function from the GenomicRanges package
+transformation. The `resize()` function from the `GenomicRanges` package
 has a `fix` argument that sets the anchor, so calling `resize()`
 coalesces anchoring and width modification. The coupling at the
 function call level is justified since the effect of setting the width
@@ -423,17 +423,17 @@ Expressiveness relates to the information content in code: the
 programmer should be able to clarify intent without unnecessary
 verbosity. For example, our overlap-based join operations are more
 concise than the multiple steps necessary to achieve the same effect
-in the original GenomicRanges API. In other cases, the plyranges API
+in the original `GenomicRanges` API. In other cases, the `plyranges` API
 increases verbosity for the sake of clarity and cohesion. Explicitly
 calling `anchor()` can require more typing, but the code is easier to
 comprehend. Another example is the set of routines for importing
 genomic annotations, including `read\_gff()`, `read\_bed()`, and
-`read_bam()`. Compared to the generic `import()` in rtracklayer, the
+`read_bam()`. Compared to the generic `import()` in `rtracklayer`, the
 explicit format-based naming in plyranges clarifies intent and the
 type of data being returned. Similarly, every plyranges function that
 computes with strand information indicates its intentions by including
 suffixes such as `directed`, `upstream` or `downstream` in its name,
-otherwise strand is ignored. The GenomicRanges API does not make this
+otherwise strand is ignored. The `GenomicRanges` API does not make this
 distinction explicit in its function naming, instead relying on a
 parameter that defaults to strand sensitivity, an arguably unintuitive
 behavior.
@@ -448,12 +448,17 @@ visualisation.
 
 ## Peak Finding
 
-The Bioconductor package `AnnotationHub` \cite{R-ahub}  can be used to search for 
-BigWig files from ChIP-Seq experiments from the Human Epigenome Roadmap project 
-\cite{Roadmap-Epigenomics-Consortium2015-pr}. Here we focus on assays for primary
-T CD8+ memory cells from peripheral blood. Using `plyranges` we will read the 
-BigWig file  corresponding to the H3 lysine 27 trimethylation (H3K27Me3) 
-methylation mark over chromosome 10. 
+In the workflow of ChIP-seq data analysis, we are interested in finding peaks 
+from islands of coverage over chromosome. Here we will use `plyranges`
+to call peaks from islands of coverage above 8 then plot the region
+surrounding the tallest peak.
+
+Using `plyranges` and the the Bioconductor package `AnnotationHub` \cite{R-ahub}
+we can download and read BigWig files from ChIP-Seq experiments from 
+the Human Epigenome Roadmap project \cite{Roadmap-Epigenomics-Consortium2015-pr}. 
+Here we analyse a BigWig file corresponding to H3 lysine 27 trimethylation 
+(H3K27Me3) of primary T CD8+ memory cells from peripheral blood, focussing
+on coverage islands over chromosome 10. 
 
 First, we extract the genome information from the BigWig file and filter
 to get the range for chromosome 10. This range will be used as a filter when 
@@ -467,7 +472,9 @@ chr10_ranges <- bw_file %>%
 ```
 
 Then we read the BigWig file only extracting scores if they overlap chromosome
-10. We also add the genome build information to the resulting ranges.
+10. We also add the genome build information to the resulting ranges. This
+book-keeping is good practice as it ensures the integrity of any 
+downstream operations such as finding overlaps.
 
 ```{r}
 chr10_scores <- bw_file %>%
@@ -476,7 +483,7 @@ chr10_scores <- bw_file %>%
 ```
 
 After filtering for regions with a coverage score greater than 8, we can
-reduce individual runs to ranges representing the islands of coverage,
+reduce individual runs to ranges representing the islands of coverage by
 using the `reduce_ranges()` function. This function allows a summary
 to be computer over each island: in this case we take the maximum of 
 the scores to find the coverage peaks over chromosome 10.
@@ -488,7 +495,7 @@ all_peaks <- chr10_scores %>%
 ```
 
 Returning to the GRanges object containing normalised coverage scores, 
-we filter to find the coordinates of the peak  containing the maximum coverage 
+we filter to find the coordinates of the peak containing the maximum coverage 
 score. We can then find a 5000 nt region centered around the maximum position 
 by anchoring and modifying the width. 
 
@@ -529,20 +536,19 @@ Consortium.
 We can directly obtain the genome information from the header of the
 BAM file: in this case the reads were aligned to the hg19 genome build
 and there are no reads overlapping the mitochondrial genome. To generate 
-bins of fixed width 10000bp we apply `tile()` function from `GenomicRanges`
-to the genomic coordinates (with `unlist` to return a GRanges object)
+bins of fixed width 10000nt we apply the `tile_ranges()` function
+to the genomic coordinates in locations.
 ```{r bins}
 locations <- h1_bam_sorted %>%
   read_bam() %>% 
   get_genome_info() 
 
 bins <- locations %>% 
-  tile(width = 10000L) %>%
-  unlist(use.names = FALSE)
+  tile_ranges(width = 10000L)
 ```
 
-Next we only read in alginments that overlap the genomic locations
-we are interested in and select the query seqeunce. Note that
+Next we only read in alignments that overlap the genomic locations
+we are interested in and select the query sequence. Note that
 the reading of the BAM file is deferred: only alignments that pass the filter 
 are loaded into memory. We can add another column representing the GC proportion 
 for each alignment using the `letterFrequency()` function from the `Biostrings` 
@@ -556,8 +562,9 @@ alignments <- h1_bam_sorted %>%
   mutate(score = as.numeric(letterFrequency(seq, "GC", as.prob = TRUE)))
 ```
 
-Finally, we use `group_by_overlaps()` with `summarize()` to compute the
-total number of reads and averge GC content within each genomic window.
+Finally, we use `group_by_overlaps()` to see where the alignments overlap the 
+genomic windows and then apply `summarize()` to compute the
+total number of reads and average GC content within each window.
 
 ```{r, cache = TRUE}
 alignments_summary <- bins %>%
@@ -624,8 +631,8 @@ h1_snp_array <- h1_snp_array %>%
                       (ref %in% c("C","T") & alt %in% c("T", "C")))
 ```
 
-We can then compute the per-chromosome transition-transversion ratio using the
-`group_by` and `summarize` pattern (figure \ref{fig:titv-viz}).
+We then compute the transition-transversion ratio over each chromosome using
+`group_by()` in combination with `summarize()` (figure \ref{fig:titv-viz}).
 
 ```{r, cache = TRUE}
 ti_tv_results <- h1_snp_array %>% 
@@ -654,10 +661,10 @@ genomic coordinates?
 We have shown how to create expressive and 
 reproducible genomic workflows using the `plyranges` DSL. By
 realising that the GRanges data model is tidy we have highlighted how to 
-implement a grammar for performing genomic arithemtic, aggregation, restriction 
+implement a grammar for performing genomic arithmetic, aggregation, restriction 
 and merging. Our examples show that `plyranges` code is succinct, human
 readable and can take advantage of the interoperability provided by
-the Bioconductor ecosytem and the R language.
+the Bioconductor ecosystem and the R language.
 
 A caveat to constructing a compatible interface with `dplyr` is that
 `plyranges` makes extensive use of non-standard evaluation in R via
@@ -686,9 +693,8 @@ access and computing patterns, so the deferred mechanisms within
 plyranges should help support interactive genomics applications.
 
 The `plyranges` package is available on the Bioconductor project
-website [https://bioconductor.org](https://bioconductor.org) or can be
-accessed via
-Github
+website [https://bioconductor.org](https://bioconductor.org) 
+or can be accessed via Github
 [https://github.com/sa-lee/plyranges](https://github.com/sa-lee/plyranges).
 
 # Acknowledgements
